# creative-iq

./: .cursorrules  .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd-dev.yml  cd-prod.yml  ci.yml  terraform.yml
airflow/dags/: dag_dbt_run.py  dag_drift_detect.py  dag_profile_compute.py  dag_sync_pg_sf.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_sync_state_table.py  0003_brand_events_vector_index.py  0004_generation_jobs.py  0005_uuid_ossp_extension.py
dbt_project/: dbt_project.yml  packages.yml
dbt_project/macros/: validate_phase3.sql
dbt_project/models/: sources.yml
dbt_project/seeds/: attribute_definitions.csv  industry_presets.csv
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: journey.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/terraform/: backend.hcl.example  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: setup_local.sh  setup_minio_buckets.py  sync_composer_dags.sh  sync_pg_to_snowflake.py  terraform_apply_dev_gcp.sh
scripts/snowflake/: bootstrap_phase3.sql
services/: __init__.py
services/ab_testing/: __init__.py  analyzer.py  designer.py
services/api/: Dockerfile
services/chat/: __init__.py  auto_events_service.py  conversation_service.py  era_service.py  events_service.py  graph.py  guardrails.py  impact_analysis_service.py  memory_search.py  presets_service.py  schemas.py  state.py  timeline_service.py
services/decomposition/: __init__.py  celery_worker_main.py  metrics.py  tasks.py
services/generation/: __init__.py  brief.py  chat_dispatch.py  compliance.py  context.py  context_models.py  export_render.py  graph.py  guidelines_ingest.py  iteration_hints.py  messages.py  metrics.py  output.py  pipeline.py  redis_notify.py  schemas.py  tasks.py  variants.py
services/ingestion/: __init__.py  state_store.py  sync_service.py
services/profile_engine/: __init__.py  metrics.py  worker.py
shared/: __init__.py  celery_app.py
shared/config/: settings.py
shared/models/: __init__.py  db.py  enums.py  schemas.py
shared/utils/: db.py  db_sync.py  gcs.py  gemini.py  redis_client.py  (+3 more)
tests/: conftest.py
(+191 files in other folders)
